--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="rocket elevators app"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAzk9H68KgVELBgN3zyXIi_UDddIIMPa7c"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
